--- a/Capstone/Views/Dj/List.cshtml
+++ b/Capstone/Views/Dj/List.cshtml
@@ -31,7 +31,7 @@
                 @Html.DisplayFor(modelItem => item.ArtistName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Img)
+                <img src="@Html.DisplayFor(modelItem => item.Img)" alt="Dj image" width="150px" height="150px" />
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ArtistSpotifyId)
