--- a/Capstone/Views/Event/Create.cshtml
+++ b/Capstone/Views/Event/Create.cshtml
@@ -2,12 +2,16 @@
 
 @{
     ViewBag.Title = "Create Event";
+    var djs = ViewBag.DJs as List<Dj>;
+    var locations = ViewBag.Locations as List<Location>;
+    var ticketTypes = ViewBag.TicketTypes as List<TicketType>;
 }
 
 <h2>Create New Event</h2>
 
 <form action="Create" method="post" enctype="multipart/form-data">
     @Html.AntiForgeryToken()
+    <div asp-validation-summary="All" class="text-danger"></div>
 
     <div class="form-group">
         <label for="Name">Event Name</label>
@@ -34,12 +38,6 @@
     </div>
 
     <div class="form-group">
-        <label for="Quantity">Number of Attendees</label>
-        <input type="number" id="Quantity" name="Quantity" class="form-control" placeholder="Enter number of attendees" value="@Model?.Quantity" />
-        <span asp-validation-for="Quantity" class="text-danger"></span>
-    </div>
-
-    <div class="form-group">
         <label for="HostName">Host Name</label>
         <input type="text" id="HostName" name="HostName" class="form-control" placeholder="Enter host name" value="@Model?.HostName" />
         <span asp-validation-for="HostName" class="text-danger"></span>
@@ -49,15 +47,15 @@
         <label for="LocationId">Location</label>
         <select id="LocationId" name="LocationId" class="form-control">
             <option value="">Select Location</option>
-            @foreach (var location in ViewBag.Locations)
+            @foreach (var l in locations)
             {
-                if (location.LocationId == Model?.LocationId)
+                if (l.LocationId == Model?.LocationId)
                 {
-                    <option value="@location.LocationId" selected="selected">@location.LocationName</option>
+                    <option value="@l.LocationId" selected="selected">@l.LocationName</option>
                 }
                 else
                 {
-                    <option value="@location.LocationId">@location.LocationName</option>
+                    <option value="@l.LocationId">@l.LocationName</option>
                 }
             }
         </select>
@@ -68,11 +66,30 @@
     <div class="form-group">
         <label for="djIds">Select DJs</label>
         <select id="djIds" name="djIds" multiple class="form-control">
-            @foreach (var dj in ViewBag.DJs)
+            @foreach (var dj in djs)
             {
                 <option value="@dj.DjId">@dj.ArtistName</option>
             }
         </select>
+    </div>
+
+    <div class="form-group">
+        <label for="ticketTypesIds">Select Ticket Types and Set Quantities:</label>
+        <div id="ticketTypeQuantities">
+            @for (int i = 0; i < ticketTypes.Count; i++)
+            {
+                var t = ticketTypes[i];
+                <div class="form-row">
+                    <div class="col">
+                        <input type="checkbox" id="ticketType_@t.TicketTypeId" name="ticketTypesIds" value="@t.TicketTypeId" />
+                        <label for="ticketType_@t.TicketTypeId">@t.TicketTypeName - @t.TicketTypeDescription</label>
+                    </div>
+                    <div class="col">
+                        <input type="number" id="ticketQuantity_@t.TicketTypeId" name="ticketQuantities[@i]" class="form-control" placeholder="Enter available quantity" min="0" />
+                    </div>
+                </div>
+            }
+        </div>
     </div>
     <div class="form-group">
         <label for="imageFiles">Upload Images</label>
